--- a/src/app/pages/atendimento/consulta-paciente/consulta-paciente.component.scss
+++ b/src/app/pages/atendimento/consulta-paciente/consulta-paciente.component.scss
@@ -87,6 +87,10 @@
   100% { transform: rotate(360deg); }
 }
 
+.btn + .btn {
+  margin-left: 10px;
+}
+
 :host ::ng-deep .ngx-datatable.bootstrap {
   border: 1px solid #d1d4d7;
   box-shadow: 0 1px 2px 0 rgba(50,50,50,.2);
